force-app/main/default/objects/Assigned_User__c.object
<CustomObject>
    <fields>
        <fullName>BE_Work_Process_ID__c</fullName>
        <label>Work Process ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_Work_Process_Name__c</fullName>
        <label>Work Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_Work_Process_URL__c</fullName>
        <label>BE Work Process URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Assigned User</relationshipLabel>
        <relationshipName>Assigned_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assigned User</label>
    <nameField>
        <label>Assigned User Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>